[package]
name = "rlevo-examples"
version.workspace = true
authors.workspace = true
description = "Visualisation, recording, and reporting examples for rlevo"
edition.workspace = true
license = "MIT OR Apache-2.0"
repository.workspace = true
publish = false

[dependencies]
rlevo-core = { path = "../rlevo-core", version = "0.2.0" }
rlevo-environments = { path = "../rlevo-environments", version = "0.2.0", default-features = false, features = ["bench"] }
rlevo-evolution = { path = "../rlevo-evolution", version = "0.2.0", default-features = false }
rlevo-reinforcement-learning = { path = "../rlevo-reinforcement-learning", version = "0.2.0" }
rlevo-benchmarks = { path = "../rlevo-benchmarks", version = "0.2.0", default-features = false }
burn = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = []
box2d = ["rlevo-environments/box2d"]
locomotion = ["rlevo-environments/locomotion"]
# Live metrics TUI product (ADR-0013).
viz-tui = ["rlevo-benchmarks/tui"]
# Post-run product (ADR-0013): recording + static-HTML report. `report` pulls
# `record` transitively in rlevo-benchmarks; `rlevo-environments/record` adds
# the per-family `RecordedEnvFamily` impls. No separate `viz-record` — the
# umbrella forwards only the two products (ADR-0013 §5).
viz-report = ["rlevo-benchmarks/report", "rlevo-environments/record"]

[lints]
workspace = true

# Examples — RL (PPO on CartPole)
[[example]]
name = "tui_ppo_cartpole"
path = "examples/classic/tui_ppo_cartpole.rs"
required-features = ["viz-tui"]

[[example]]
name = "report_ppo_cartpole_with_client"
path = "examples/classic/report_ppo_cartpole_with_client.rs"
required-features = ["viz-report"]

# Examples — evolution / landscapes
[[example]]
name = "report_sphere_landscape_with_client"
path = "examples/evolution/report_sphere_landscape_with_client.rs"
required-features = ["viz-report"]

# Examples — grids
[[example]]
name = "report_grids_with_client"
path = "examples/grids/report_grids_with_client.rs"
required-features = ["viz-report"]

# Examples — toy_text
[[example]]
name = "report_toy_text_with_client"
path = "examples/toy_text/report_toy_text_with_client.rs"
required-features = ["viz-report"]

# Examples — locomotion
[[example]]
name = "report_inverted_pendulum_with_client"
path = "examples/locomotion/report_inverted_pendulum_with_client.rs"
required-features = ["locomotion", "viz-report"]

# Examples — box2d
[[example]]
name = "report_lunar_lander_with_client"
path = "examples/box2d/report_lunar_lander_with_client.rs"
required-features = ["box2d", "viz-report"]

# Examples — benchmarks harness
[[example]]
name = "ga_rastrigin"
path = "examples/harness/ga_rastrigin.rs"

[[example]]
name = "tabular_bandit"
path = "examples/harness/tabular_bandit.rs"

# Examples — evolution (EDA probability models)
[[example]]
name = "eda_showcase"
path = "examples/evolution/eda_showcase.rs"

# Examples — book (compiled, test-guarded; pulled into user-book via {{#rustdoc_include}})
[[example]]
name = "ch01_sphere_ga"
path = "examples/book/ch01_sphere_ga.rs"

[[example]]
name = "ch03_dqn_cartpole"
path = "examples/book/ch03_dqn_cartpole.rs"

# Examples — evolution (co-evolution)
[[example]]
name = "competitive_predator_prey"
path = "examples/evolution/competitive_predator_prey.rs"

[[example]]
name = "cooperative_ccga_rastrigin"
path = "examples/evolution/cooperative_ccga_rastrigin.rs"
