[package]
name = "rlevo-hybrid"
version.workspace = true
authors.workspace = true
description = "Hybrid evolutionary + RL strategies for rlevo (internal crate — use `rlevo` for the full API)"
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
burn = { workspace = true }
rlevo-core = { path = "../rlevo-core", version = "0.1.0" }
rlevo-evolution = { path = "../rlevo-evolution", version = "0.1.0" }
rlevo-reinforcement-learning = { path = "../rlevo-reinforcement-learning", version = "0.1.0" }
rand = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
