[package]
name = "rlevo-test-support"
version.workspace = true
authors.workspace = true
description = "Internal shared fixtures and helpers for rlevo integration tests (not published)"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
burn = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
# Backing for the `capture` module, which lets integration tests assert on the
# `tracing` events a training loop emits (issue #321). Dev-only reach: this
# crate is `publish = false` and consumed solely through `[dev-dependencies]`.
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rlevo-core = { path = "../rlevo-core", version = "0.3.1" }
rlevo-environments = { path = "../rlevo-environments", version = "0.3.1", default-features = false }

[lints]
workspace = true
