[package]
name = "rlevo-utils"
version.workspace = true
authors.workspace = true
description = "Shared math utilities for rlevo (internal crate — use `rlevo` for the full API)"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
