[package]
name = "rlevo"
version.workspace = true
authors.workspace = true
description = "Deep Reinforcement Learning with Evolutionary Optimization"
edition.workspace = true
license = "MIT OR Apache-2.0"
repository.workspace = true
documentation = "https://docs.rs/rlevo"
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
rlevo-core = { path = "../rlevo-core", version = "0.1.0" }
rlevo-environments = { path = "../rlevo-environments", version = "0.1.0", default-features = false }
rlevo-reinforcement-learning = { path = "../rlevo-reinforcement-learning", version = "0.1.0" }
rlevo-evolution = { path = "../rlevo-evolution", version = "0.1.0", default-features = false }
rlevo-hybrid = { path = "../rlevo-hybrid", version = "0.1.0" }

[dev-dependencies]
rlevo-benchmarks = { path = "../rlevo-benchmarks", version = "0.1.0" }
rlevo-environments = { path = "../rlevo-environments", version = "0.1.0", features = ["bench"] }
approx = { workspace = true }
burn = { workspace = true }
criterion = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["box2d", "locomotion", "custom-kernels"]
# Box2D-style physics environments (BipedalWalker, LunarLander, CarRacing)
box2d = ["rlevo-environments/box2d"]
# MuJoCo-inspired locomotion environments via Rapier3D
locomotion = ["rlevo-environments/locomotion"]
# Custom CubeCL GPU kernels for evolutionary algorithm hot paths
custom-kernels = ["rlevo-evolution/custom-kernels"]
# Live metrics TUI product (ADR-0013).
viz-tui = ["rlevo-benchmarks/tui"]
# Post-run product (ADR-0013): recording + static-HTML report. `report` pulls
# `record` transitively in rlevo-benchmarks; `rlevo-environments/record` adds
# the per-family `RecordedEnvFamily` impls. No separate `viz-record` — the
# umbrella forwards only the two products (ADR-0013 §5).
viz-report = ["rlevo-benchmarks/report", "rlevo-environments/record"]

[lints]
workspace = true

# Examples — gridworlds
[[example]]
name = "grid_door_key_scripted"
path = "examples/envs/grids/grid_door_key_scripted.rs"

# Examples — classic control
[[example]]
name = "cartpole_random"
path = "examples/envs/classic/cartpole_random.rs"

[[example]]
name = "cartpole_timelimit"
path = "examples/envs/classic/cartpole_timelimit.rs"

[[example]]
name = "mountain_car_continuous_random"
path = "examples/envs/classic/mountain_car_continuous_random.rs"

[[example]]
name = "pendulum_random"
path = "examples/envs/classic/pendulum_random.rs"

# Examples — evolution showcases
[[example]]
name = "sphere_showcase"
path = "examples/evo/sphere_showcase.rs"

[[example]]
name = "ackley_showcase"
path = "examples/evo/ackley_showcase.rs"

[[example]]
name = "rastrigin_showcase"
path = "examples/evo/rastrigin_showcase.rs"

# Random-baseline-vs-learned benches. Each prints a reward/success quality
# comparison, then times per-step rollout throughput for both policies.
# Shared DQN model + Polyak scaffolding lives in `benches/support/dqn.rs`.
# Pendulum actor/critic models live in `benches/support/pendulum.rs`.
# Run e.g. with `cargo bench -p rlevo --bench grid_empty_dqn`.
[[bench]]
name = "grid_empty_rl"
path = "benches/grid_empty_rl.rs"
harness = false

[[bench]]
name = "grid_memory_rl"
path = "benches/grid_memory_rl.rs"
harness = false

[[bench]]
name = "acrobot_rl"
path = "benches/acrobot_rl.rs"
harness = false

[[bench]]
name = "mountain_car_rl"
path = "benches/mountain_car_rl.rs"
harness = false

[[bench]]
name = "cartpole_rl"
path = "benches/cartpole_rl.rs"
harness = false

[[bench]]
name = "pendulum_rl"
path = "benches/pendulum_rl.rs"
harness = false

# End-to-end record → report pipeline smoke test (formerly the
# `report_cartpole*` random-policy examples). Gated on the report stack.
[[test]]
name = "cartpole_report_smoke"
path = "tests/cartpole_report_smoke.rs"
required-features = ["viz-report"]
