[package]
name = "rlevo"
version.workspace = true
authors.workspace = true
description = "Deep Reinforcement Learning with Evolutionary Optimization"
edition.workspace = true
license = "MIT OR Apache-2.0"
repository.workspace = true
documentation = "https://docs.rs/rlevo"
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
rlevo-core = { path = "../rlevo-core", version = "0.2.0" }
rlevo-environments = { path = "../rlevo-environments", version = "0.2.0", default-features = false }
rlevo-reinforcement-learning = { path = "../rlevo-reinforcement-learning", version = "0.2.0" }
rlevo-evolution = { path = "../rlevo-evolution", version = "0.2.0", default-features = false }
rlevo-hybrid = { path = "../rlevo-hybrid", version = "0.2.0" }

[dev-dependencies]
rlevo-benchmarks = { path = "../rlevo-benchmarks", version = "0.2.0" }
rlevo-environments = { path = "../rlevo-environments", version = "0.2.0", features = ["bench"] }
approx = { workspace = true }
burn = { workspace = true }
criterion = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
tempfile = "3"
tracing-subscriber = { workspace = true }

[features]
default = ["box2d", "locomotion", "custom-kernels"]
# Box2D-style physics environments (BipedalWalker, LunarLander, CarRacing)
box2d = ["rlevo-environments/box2d"]
# MuJoCo-inspired locomotion environments via Rapier3D
locomotion = ["rlevo-environments/locomotion"]
# Custom CubeCL GPU kernels for evolutionary algorithm hot paths
custom-kernels = ["rlevo-evolution/custom-kernels"]
# Live metrics TUI product (ADR-0013).
viz-tui = ["rlevo-benchmarks/tui"]
# Post-run product (ADR-0013): recording + static-HTML report. `report` pulls
# `record` transitively in rlevo-benchmarks; `rlevo-environments/record` adds
# the per-family `RecordedEnvFamily` impls. No separate `viz-record` — the
# umbrella forwards only the two products (ADR-0013 §5).
viz-report = ["rlevo-benchmarks/report", "rlevo-environments/record"]

[lints]
workspace = true

# Examples — gridworlds
[[example]]
name = "grid_door_key_scripted"
path = "examples/envs/grids/grid_door_key_scripted.rs"

[[example]]
name = "pixel_grid"
path = "examples/envs/pixel_grid.rs"

# Examples — classic control
[[example]]
name = "cartpole_random"
path = "examples/envs/classic/cartpole_random.rs"

[[example]]
name = "cartpole_timelimit"
path = "examples/envs/classic/cartpole_timelimit.rs"

[[example]]
name = "mountain_car_continuous_random"
path = "examples/envs/classic/mountain_car_continuous_random.rs"

[[example]]
name = "pendulum_random"
path = "examples/envs/classic/pendulum_random.rs"

# Examples — evolution showcases
[[example]]
name = "sphere_showcase"
path = "examples/evo/sphere_showcase.rs"

[[example]]
name = "ackley_showcase"
path = "examples/evo/ackley_showcase.rs"

[[example]]
name = "rastrigin_showcase"
path = "examples/evo/rastrigin_showcase.rs"

# Tier 1 — scalable n-D landscapes
[[example]]
name = "rosenbrock_showcase"
path = "examples/evo/rosenbrock_showcase.rs"

[[example]]
name = "griewank_showcase"
path = "examples/evo/griewank_showcase.rs"

[[example]]
name = "schwefel_showcase"
path = "examples/evo/schwefel_showcase.rs"

[[example]]
name = "michalewicz_showcase"
path = "examples/evo/michalewicz_showcase.rs"

[[example]]
name = "penalized1_showcase"
path = "examples/evo/penalized1_showcase.rs"

# Tier 2 — classical 2-D landscapes
[[example]]
name = "branin_showcase"
path = "examples/evo/branin_showcase.rs"

[[example]]
name = "himmelblau_showcase"
path = "examples/evo/himmelblau_showcase.rs"

[[example]]
name = "six_hump_camel_showcase"
path = "examples/evo/six_hump_camel_showcase.rs"

[[example]]
name = "easom_showcase"
path = "examples/evo/easom_showcase.rs"

[[example]]
name = "goldstein_price_showcase"
path = "examples/evo/goldstein_price_showcase.rs"

[[example]]
name = "cross_in_tray_showcase"
path = "examples/evo/cross_in_tray_showcase.rs"

[[example]]
name = "bukin6_showcase"
path = "examples/evo/bukin6_showcase.rs"

# Tier 3 — stress-test landscapes
[[example]]
name = "lunacek_showcase"
path = "examples/evo/lunacek_showcase.rs"

[[example]]
name = "deb1_showcase"
path = "examples/evo/deb1_showcase.rs"

[[example]]
name = "needle_eye_showcase"
path = "examples/evo/needle_eye_showcase.rs"

[[example]]
name = "eggholder_showcase"
path = "examples/evo/eggholder_showcase.rs"

[[example]]
name = "alpine1_showcase"
path = "examples/evo/alpine1_showcase.rs"

[[example]]
name = "rosenbrock_flat_showcase"
path = "examples/evo/rosenbrock_flat_showcase.rs"

[[example]]
name = "trefethen_showcase"
path = "examples/evo/trefethen_showcase.rs"

# Memetic algorithms — evals-to-target comparison, not part of the
# fixed-generation `common::showcase` panel (the panel's generation budget
# would hide the extra evaluations local search spends per generation).
[[example]]
name = "memetic_showcase"
path = "examples/evo/memetic_showcase.rs"

# Random-baseline-vs-learned benches. Each prints a reward/success quality
# comparison, then times per-step rollout throughput for both policies.
# Shared DQN model + Polyak scaffolding lives in `benches/support/dqn.rs`.
# Pendulum actor/critic models live in `benches/support/pendulum.rs`.
# Run e.g. with `cargo bench -p rlevo --bench grid_empty_dqn`.
[[bench]]
name = "grid_empty_rl"
path = "benches/grid_empty_rl.rs"
harness = false

[[bench]]
name = "grid_memory_rl"
path = "benches/grid_memory_rl.rs"
harness = false

[[bench]]
name = "acrobot_rl"
path = "benches/acrobot_rl.rs"
harness = false

[[bench]]
name = "mountain_car_rl"
path = "benches/mountain_car_rl.rs"
harness = false

[[bench]]
name = "cartpole_rl"
path = "benches/cartpole_rl.rs"
harness = false

[[bench]]
name = "pendulum_rl"
path = "benches/pendulum_rl.rs"
harness = false

# End-to-end record → report pipeline smoke test (formerly the
# `report_cartpole*` random-policy examples). Gated on the report stack.
[[test]]
name = "cartpole_report_smoke"
path = "tests/cartpole_report_smoke.rs"
required-features = ["viz-report"]

[[test]]
name = "c51_integration"
path = "tests/c51_integration.rs"

[[test]]
name = "ddpg_integration"
path = "tests/ddpg_integration.rs"

[[test]]
name = "dqn_integration"
path = "tests/dqn_integration.rs"

[[test]]
name = "evaluator_smoke"
path = "tests/evaluator_smoke.rs"

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"

[[test]]
name = "ppg_integration"
path = "tests/ppg_integration.rs"

[[test]]
name = "ppo_integration"
path = "tests/ppo_integration.rs"

[[test]]
name = "qrdqn_integration"
path = "tests/qrdqn_integration.rs"

[[test]]
name = "rastrigin_run_suite"
path = "tests/rastrigin_run_suite.rs"

[[test]]
name = "recording_episode_count"
path = "tests/recording_episode_count.rs"
required-features = ["viz-report"]

[[test]]
name = "sac_integration"
path = "tests/sac_integration.rs"

[[test]]
name = "swarm_rastrigin_suite"
path = "tests/swarm_rastrigin_suite.rs"

[[test]]
name = "td3_integration"
path = "tests/td3_integration.rs"
